--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- favicon
 		============================================ -->
-    <link rel="shortcut icon" type="image/x-icon" href="img/logo/kcslogo.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/logo/kcs.png" />
 
     <!-- Google Fonts
 		============================================ -->
@@ -168,7 +168,7 @@
                           ></a>
                           <ul class="sub-menu">
                             <li><a href="#">CBSE Curriculam</a></li>
-                            <li><a href="#">Faculty</a></li>
+                            <li><a href="teacher.html">Faculty</a></li>
                             <li>
                               <a href="#">Academic Calendar</a>
                             </li>
@@ -313,7 +313,7 @@
                       ></a>
                       <ul class="sub-menu">
                         <li><a href="#">CBSE Curriculam</a></li>
-                        <li><a href="#">Faculty</a></li>
+                        <li><a href="teacher.html">Faculty</a></li>
                         <li>
                           <a href="#">Academic Calendar</a>
                         </li>
@@ -805,18 +805,7 @@
                   <i class="fa fa-cutlery"></i>
                 </div>
               </div>
-              <div class="single-service-item">
-                <div class="single-service-text">
-                  <h4>Language Lessons</h4>
-                  <p>
-                    Quidem laudantium itaque reiciendis inventore. Nobis
-                    dolorem, odit ipsam ratione minus quisquam iste.
-                  </p>
-                </div>
-                <div class="single-service-icon">
-                  <i class="fa fa-language"></i>
-                </div>
-              </div>
+            
               <div class="single-service-item">
                 <div class="single-service-text">
                   <h4>Transportation</h4>
@@ -850,18 +839,7 @@
                   </p>
                 </div>
               </div>
-              <div class="single-service-item">
-                <div class="single-service-icon">
-                  <i class="fa fa-bookmark"></i>
-                </div>
-                <div class="single-service-text">
-                  <h4>Special Education</h4>
-                  <p>
-                    voluptatem, cupiditate eveniet dolores inventore delectus
-                    vel eius molestias tho minus, corporis.
-                  </p>
-                </div>
-              </div>
+            
               <div class="single-service-item">
                 <div class="single-service-icon">
                   <i class="fa fa-graduation-cap"></i>
